wordpress/wp-content/themes/ripple/assets/less/wordpress.less
/* ... */
//Additional adjustments
.mm_get_in_touch {
	margin: 0 0 20px 0;
}


//Dropdown menu adjustments

li.menu-item ul li {display:none;}

li.menu-item:hover ul.sub-menu li {
	display:block;
	line-height: 30px;
	width: 106px;
}

li.menu-item:hover ul.sub-menu li a {
	border-bottom: none;
	font-size: .8em;
}

li.menu-item:hover ul.sub-menu li a:hover {
	border-bottom: 1px solid @blue;
}

ul.sub-menu {
	position: absolute;
	margin-top: 25px;
	float: right;
	background: @white;
	width: 90px;
	//padding-left: 5px;
}

@media (max-width: 480px) {
	ul.sub-menu {
		display: none;
	}
}

span.num_transactions, span.volume_traded {
color: #fff;
font-size: 2.4rem;
font-weight: 300;
}

.entry-content ul li ul li {
list-style: circle outside none !important;
margin-left: 18px;
}

.learn_more {
	color: @blue;
	position: relative;
	top:15px;
	font-size: 1.2em;
}

.page .entry-content {
	text-align: left;
	
	p {
		line-height: 22px;
	}
	
	h4 {
		line-height: 1.4;
	}

}

.market-makers .contact_us a:hover, .page-id-2581 .contact_us a:hover {
	color: #fff;
}

//Additional Blog Adjustments
.blog { 
	.transaction-feed {display:none;}

	.entry-content a {
		color: @blue;
	}

	.entry-content img {
		max-width: 100%;
	}

	.logo img {
		max-width:100%;
	}
	
	.with-sidebar .post-thumbnail.col-sm-3 {
		margin: 0 0 10px 0;
	}
	
	.entry-content {
		max-width: 640px;
	}
	
	span.the_date {
		color: #999;
	}
	@media (min-width: 1145px) { 
		.wrapper {
			width:1140px !important;
		}
	}
}

